--- a/package.json
+++ b/package.json
@@ -1,13 +1,28 @@
 {
-  "name": "Week 5 Assessment: Contacts App",
+  "name": "week-5-assessment",
   "version": "1.0.0",
   "description": "Build a contacts manager web application with Express and PostgreSQL.",
   "scripts": {
     "start": "node server.js",
     "start:dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "schema": "psql contacts < schema.sql",
+    "import": "psql contacts < contacts_full.sql"
   },
   "license": "MIT",
-  "dependencies": {},
+  "author": {
+    "name": "Ally Kendall"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/allyface/week-5-assessment"
+  },
+  "dependencies": {
+    "body-parser": "^1.17.1",
+    "express": "^4.15.2",
+    "node": "0.0.0",
+    "nodemon": "^1.11.0",
+    "pg": "^6.2.2"
+  },
   "devDependencies": {}
 }
